--- a/index.html
+++ b/index.html
@@ -182,10 +182,16 @@
                 <div class="row pantry-second-row">
                     <div class="col-md-6">
                         <div class="youtube-video">
-                            <iframe src="https://www.youtube.com/embed/AJb9GpR_dgQ"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
+                            <a href="#videostory" id="videolink">
+                                <img src="./images/restaurant-20.jpg" alt="">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                            <div id="videostory" class="mfp-hide" style="max-width: 55%; margin: 0 auto;">
+                                <iframe width="853" height="480" src="https://www.youtube.com/embed/AJb9GpR_dgQ"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -268,7 +274,7 @@
                     <div class="col-4">
                         <div class="product-box">
                             <img src="./images/product-3.jpg" alt="">
-                            <div class="product-details shadow">
+                            <div class="product-details">
                                 <div class="product-title">Product 1 Title</div>
                                 <div class="price">$9.95</div>
                             </div>
@@ -277,7 +283,7 @@
                     <div class="col-4">
                         <div class="product-box">
                             <img src="./images/product-4.jpg" alt="">
-                            <div class="product-details shadow">
+                            <div class="product-details">
                                 <div class="product-title">Product 2 Title</div>
                                 <div class="price">$9.95</div>
                             </div>
@@ -286,7 +292,7 @@
                     <div class="col-4">
                         <div class="product-box">
                             <img src="./images/product-7.jpg" alt="">
-                            <div class="product-details shadow">
+                            <div class="product-details">
                                 <div class="product-title">Product 3 Title</div>
                                 <div class="price">$9.95</div>
                             </div>
@@ -297,7 +303,7 @@
                     <div class="col-4">
                         <div class="product-box">
                             <img src="./images/product-6.jpg" alt="">
-                            <div class="product-details shadow">
+                            <div class="product-details">
                                 <div class="product-title">Product 4 Title</div>
                                 <div class="price">$9.95</div>
                             </div>
@@ -306,7 +312,7 @@
                     <div class="col-4">
                         <div class="product-box">
                             <img src="./images/product-5.jpg" alt="">
-                            <div class="product-details shadow">
+                            <div class="product-details">
                                 <div class="product-title">Product 5 Title</div>
                                 <div class="price">$9.95</div>
                             </div>
@@ -315,7 +321,7 @@
                     <div class="col-4">
                         <div class="product-box">
                             <img src="./images/product-2.jpg" alt="">
-                            <div class="product-details shadow">
+                            <div class="product-details">
                                 <div class="product-title">Product 6 Title</div>
                                 <div class="price">$9.95</div>
                             </div>
@@ -529,13 +535,13 @@
                             <div class="message mt-4"><label for="message">Message</label></div>
                             <textarea name="" id="" cols="30" rows="2" placeholder="Enter your Message"></textarea>
                             <div class="submit-btn mt-3">
-                                <button type="submit">Submit</button>
+                                <button type="submit" class="footer-btn">Submit</button>
                             </div>
                         </form>
                     </div>
                     <div class="col-md-4">
                         <div class="map">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d57496.65415906588!2d88.86639056862792!3d25.75269222837386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1627587380156!5m2!1sen!2sbd" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d57496.65415906588!2d88.86639056862792!3d25.75269222837386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1627587380156!5m2!1sen!2sbd" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
@@ -566,7 +572,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 
     <script src="js/main.js"></script>
 
